tests/snapshots/run_wpt_conformance__coreml_reduceProduct_float16_3D_tensor_options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_product.https.any.js",
    "reduceProduct float16 3D tensor options.keepDimensions=true",
    "coreml",
    "PASS",
)
