tests/snapshots/run_wpt_conformance__coreml_reduceProduct_float16_4D_tensor_options_axes_with_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_product.https.any.js",
    "reduceProduct float16 4D tensor options.axes with options.keepDimensions=false",
    "coreml",
    "PASS",
)
